<resources>
    <string name="app_name">Proyek2</string>
    <string name="judul">PROYEK 2</string>
    <string name="username">Username :</string>
    <string name="login">Login</string>
    <string name="password">Password :</string>
    <string name="register">Register</string>
    <string name="email">Email :</string>
    <string name="nama">Nama Lengkap :</string>
    <string name="sekolah">Asal Sekolah :</string>
    <string name="Alamat">Alamat Tinggal :</string>
    <string name="simpan">Simpan</string>
    <string name="item"></string>
</resources>
