<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#000"
                android:textSize="14sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:id="@+id/editUsername"
                android:layout_marginTop="5sp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                android:inputType="textFilter"
                android:textColor="#000"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/password"
                android:textColor="#000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="10sp"
                android:textColor="#000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/nama"
                android:textColor="#000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/editNamaLengkap"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:textColor="#000"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/sekolah"
                android:textColor="#000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/editAsalSekolah"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:textColor="#000"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/Alamat"
                android:textColor="#000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/editAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="top|left"
                android:lines="3"
                android:padding="5sp"
                android:singleLine="false"
                android:textColor="#000"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorPrimary"
                android:text="@string/simpan"
                android:textColor="#FFF"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>